deps/v8/test/message/fail/formal-parameters-bad-rest.out
*%(basename)s:7: SyntaxError: Rest parameter must be last formal parameter
function foo(...b, a) { return a }
                 ^
SyntaxError: Rest parameter must be last formal parameter
